--- a/packages/rma-server/docker/env.tmpl
+++ b/packages/rma-server/docker/env.tmpl
@@ -2,15 +2,6 @@ DB_HOST={{ .Env.DB_HOST }}
 DB_NAME={{ .Env.DB_NAME }}
 DB_USER={{ .Env.DB_USER }}
 DB_PASSWORD={{ .Env.DB_PASSWORD }}
-{{- if (.Env.ES_HOST) }}
-ES_HOST={{ .Env.ES_HOST -}}
-{{ end }}
-{{- if (.Env.ES_USER) }}
-ES_USER={{- .Env.ES_USER -}}
-{{ end }}
-{{- if (.Env.ES_PASSWORD) }}
-ES_PASSWORD={{- .Env.ES_PASSWORD -}}
-{{ end }}
-{{- if (.Env.ES_STREAM) }}
-ES_STREAM={{ .Env.ES_STREAM -}}
-{{ end }}
+CACHE_DB_NAME={{ .Env.CACHE_DB_NAME }}
+CACHE_DB_PASSWORD={{ .Env.CACHE_DB_PASSWORD }}
+CACHE_DB_USER={{ .Env.CACHE_DB_USER }}
