--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -32,8 +32,8 @@
               *ngIf="loggedIn"
               routerLink="/sales"
             >
-              <ion-icon slot="start" name="home"></ion-icon>
-              <ion-label>Sales</ion-label>
+              <ion-icon slot="start" name="list-box"></ion-icon>
+              <ion-label>Sales Invoice</ion-label>
             </ion-item>
             <ion-item
               routerDirection="root"
