--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -1,13 +1,18 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="navigateBack()">
+        <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Add Sales Invoice</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="page-background">
-  <ion-grid no-padding>
-    <ion-row>
-      <ion-col offset="1" size="10">
+  <ion-grid class="ion-no-padding">
+    <ion-row class="ion-no-padding">
+      <ion-col class="ion-no-padding">
         <ion-card>
           <ion-card-header>
             <ion-card-title>
@@ -75,8 +80,8 @@
         </ion-card>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col offset="1" size="10">
+    <ion-row class="ion-no-padding">
+      <ion-col class="ion-no-padding">
         <ion-card>
           <ion-card-header>
             <ion-card-title>
@@ -113,6 +118,54 @@
                 </ion-col>
               </ion-row>
             </ion-grid>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-no-padding">
+      <ion-col class="ion-no-padding">
+        <ion-card>
+          <ion-card-header>
+            <ion-row class="align">
+              <ion-col>
+                <ion-card-title>
+                  <ion-text color="tertiary">
+                    Items
+                  </ion-text>
+                </ion-card-title>
+              </ion-col>
+              <ion-col class="ion-text-right" size="auto">
+                <ion-button color="tertiary" fill="outline" (click)="addItem()">
+                  Add
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-card-header>
+          <ion-card-content class="ion-no-padding">
+            <ion-item lines="none">
+              <table mat-table [dataSource]="dataSource" style="width: 100%;">
+                <ng-container matColumnDef="item">
+                  <th mat-header-cell *matHeaderCellDef>Item</th>
+                  <td mat-cell *matCellDef="let row">{{row.name}}</td>
+                </ng-container>
+                <ng-container matColumnDef="quantity">
+                  <th mat-header-cell *matHeaderCellDef>Quantity</th>
+                  <td mat-cell *matCellDef="let row">{{row.quantity}}</td>
+                </ng-container>
+                <ng-container matColumnDef="rate">
+                  <th mat-header-cell *matHeaderCellDef>Rate</th>
+                  <td mat-cell *matCellDef="let row">{{row.rate}}</td>
+                </ng-container>
+                <tr
+                  mat-header-row
+                  *matHeaderRowDef="displayedColumns; sticky: true"
+                ></tr>
+                <tr
+                  mat-row
+                  *matRowDef="let row; columns: displayedColumns;"
+                ></tr>
+              </table>
+            </ion-item>
           </ion-card-content>
         </ion-card>
       </ion-col>
