fix(rma-frontend): Fixed side-menu width and box-shadow

--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -1,6 +1,9 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu type="overlay" style="max-width: 180px;">
+    <ion-menu
+      type="overlay"
+      style="box-shadow: 1px 0 4px rgb(0, 0, 0,.24) !important ;z-index:100 ; border-right: 0"
+    >
       <ion-header>
         <ion-toolbar>
           <ion-title>Menu</ion-title>
