--- a/packages/rma-frontend/src/global.scss
+++ b/packages/rma-frontend/src/global.scss
@@ -43,3 +43,8 @@
 .header-row {
   font-weight: bold;
 }
+
+.split-pane-visible > .split-pane-side {
+  min-width: 200px !important;
+  max-width: 200px !important;
+}
