--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -143,28 +143,66 @@
           </ion-card-header>
           <ion-card-content class="ion-no-padding">
             <ion-item lines="none">
-              <table mat-table [dataSource]="dataSource" style="width: 100%;">
+              <mat-table #table [dataSource]="dataSource" style="width: 100%;">
                 <ng-container matColumnDef="item">
-                  <th mat-header-cell *matHeaderCellDef>Item</th>
-                  <td mat-cell *matCellDef="let row">{{row.name}}</td>
+                  <mat-header-cell *matHeaderCellDef>Item</mat-header-cell>
+                  <mat-cell
+                    *matCellDef="let row"
+                    [satPopoverAnchor]="p"
+                    (click)="p.open()"
+                  >
+                    <ng-container *ngIf="row.name">
+                      {{row.name}}
+                    </ng-container>
+                    <span class="add-comment" *ngIf="!row.name">
+                      Add an item
+                    </span>
+                    <sat-popover
+                      #p
+                      hasBackdrop
+                      xAlign="start"
+                      yAlign="start"
+                      (closed)="updateItem(row, $event)"
+                    >
+                      <inline-edit [value]="row.name"></inline-edit>
+                    </sat-popover>
+                  </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="quantity">
-                  <th mat-header-cell *matHeaderCellDef>Quantity</th>
-                  <td mat-cell *matCellDef="let row">{{row.quantity}}</td>
+                  <mat-header-cell *matHeaderCellDef>Quantity</mat-header-cell>
+                  <mat-cell
+                    *matCellDef="let row"
+                    [satPopoverAnchor]="p"
+                    (click)="p.open()"
+                  >
+                    <ng-container *ngIf="row.quantity">
+                      {{row.quantity}}
+                    </ng-container>
+                    <span class="add-comment" *ngIf="!row.quantity">
+                      Quantity
+                    </span>
+                    <sat-popover
+                      #p
+                      hasBackdrop
+                      xAlign="start"
+                      yAlign="start"
+                      (closed)="updateQuantity(row, $event)"
+                    >
+                      <inline-edit [value]="row.quantity"></inline-edit>
+                    </sat-popover>
+                  </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="rate">
-                  <th mat-header-cell *matHeaderCellDef>Rate</th>
-                  <td mat-cell *matCellDef="let row">{{row.rate}}</td>
+                  <mat-header-cell *matHeaderCellDef>Rate</mat-header-cell>
+                  <mat-cell *matCellDef="let row">{{row.rate}}</mat-cell>
                 </ng-container>
-                <tr
-                  mat-header-row
+                <mat-header-row
                   *matHeaderRowDef="displayedColumns; sticky: true"
-                ></tr>
-                <tr
-                  mat-row
+                ></mat-header-row>
+                <mat-row
                   *matRowDef="let row; columns: displayedColumns;"
-                ></tr>
-              </table>
+                ></mat-row>
+              </mat-table>
             </ion-item>
           </ion-card-content>
         </ion-card>
