--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -33,43 +33,94 @@
               </ion-col>
             </ion-row>
           </ion-card-header>
+          <div class="loading-shade" *ngIf="dataSource.loading$ | async">
+            <mat-progress-bar
+              *ngIf="dataSource.loading$ | async"
+              mode="indeterminate"
+            ></mat-progress-bar>
+          </div>
           <ion-card-content class="ion-no-padding">
-            <ion-list>
-              <ion-item class="ion-no-padding">
-                <ion-grid class="ion-no-padding">
-                  <ion-row>
-                    <ion-col class="ion-text-center header-row">
-                      Title
-                    </ion-col>
-                    <ion-col class="ion-text-center header-row">
-                      Status
-                    </ion-col>
-                    <ion-col class="ion-text-center header-row">
-                      Serial No.
-                    </ion-col>
-                  </ion-row>
-                </ion-grid>
-              </ion-item>
-              <ion-item
-                *ngFor="let invoice of salesInvoiceList"
-                class="ion-no-padding"
-                lines="none"
+            <div class="search-models">
+              <mat-form-field class="full-width">
+                <input
+                  matInput
+                  placeholder="Search"
+                  [(ngModel)]="search"
+                  (keyup.enter)="setFilter()"
+                />
+                <button mat-button matSuffix (click)="setFilter()">
+                  <mat-icon>search</mat-icon>
+                </button>
+              </mat-form-field>
+            </div>
+            <table
+              mat-table
+              class="full-width-table"
+              [dataSource]="dataSource"
+              matSort
+              aria-label="Elements"
+              style="width: 100%;"
+            >
+              <!-- serial_no Column -->
+              <ng-container matColumnDef="customer">
+                <th
+                  mat-header-cell
+                  *matHeaderCellDef
+                  mat-sort-header
+                  (click)="setFilter()"
+                >
+                  Title
+                </th>
+                <td mat-cell *matCellDef="let row">
+                  {{row.customer}}
+                </td>
+              </ng-container>
+
+              <!-- UUID Column -->
+              <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef>Status</th>
+                <td mat-cell *matCellDef="let row">
+                  <ion-text color="success" *ngIf="row.submitted">
+                    Paid
+                  </ion-text>
+                  <ion-text *ngIf="!row.submitted" color="danger">
+                    Draft
+                  </ion-text>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="total">
+                <th
+                  mat-header-cell
+                  *matHeaderCellDef
+                  mat-sort-header
+                  (click)="setFilter()"
+                >
+                  Total
+                </th>
+                <td mat-cell *matCellDef="let row">
+                  ₹ {{row.total}}
+                </td>
+              </ng-container>
+
+              <tr
+                mat-header-row
+                *matHeaderRowDef="displayedColumns; sticky: true"
+              ></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+
+            <mat-card-actions>
+              <mat-paginator
+                #paginator
+                class="mat-paginator-sticky"
+                (page)="getUpdate($event)"
+                [pageIndex]="paginator.pageIndex"
+                [length]="dataSource.length"
+                [pageSizeOptions]="[10, 50, 100, 500]"
               >
-                <ion-grid class="ion-no-padding">
-                  <ion-row>
-                    <ion-col class="ion-text-center">
-                      {{invoice.customer.name}}
-                    </ion-col>
-                    <ion-col class="ion-text-center">
-                      {{invoice.status}}
-                    </ion-col>
-                    <ion-col class="ion-text-center">
-                      {{invoice.series}}
-                    </ion-col>
-                  </ion-row>
-                </ion-grid>
-              </ion-item>
-            </ion-list>
+              </mat-paginator>
+            </mat-card-actions>
           </ion-card-content>
         </ion-card>
       </ion-col>
