--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -22,19 +22,21 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-grid no-padding>
+            <ion-grid class="ion-no-padding">
               <ion-row>
                 <ion-col size="5">
                   <ion-item>
-                    <ion-label position="floating">Series</ion-label>
+                    <ion-label position="floating">Naming Series</ion-label>
                     <ion-select
                       interface="popover"
                       placeholder="Select Series"
                       [(ngModel)]="series"
                     >
-                      <ion-select-option value="sinv">SINV-</ion-select-option>
+                      <ion-select-option value="sinv"
+                        >SINV-####</ion-select-option
+                      >
                       <ion-select-option value="sinvret"
-                        >SINV-RET-</ion-select-option
+                        >SINV-RET-####</ion-select-option
                       >
                     </ion-select>
                   </ion-item>
@@ -57,10 +59,10 @@
                   </ion-item>
                 </ion-col>
               </ion-row>
-              <ion-row>
+              <ion-row class="align">
                 <ion-col size="5">
                   <ion-item>
-                    <ion-label position="floating">Customer</ion-label>
+                    <ion-label position="floating">Customer Name</ion-label>
                     <ion-select
                       interface="popover"
                       placeholder="Select Customer"
@@ -72,6 +74,73 @@
                         >{{customer.name}}</ion-select-option
                       >
                     </ion-select>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="2" size="5">
+                  <ion-item>
+                    <ion-label position="floating">Posting Date</ion-label>
+                    <ion-datetime display-format="DD.MM.YYYY"></ion-datetime>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="5">
+                  <ion-item lines="none">
+                    <ion-label position="floating">Remaining Balance</ion-label>
+                    <ion-input
+                      readonly="true"
+                      placeholder="20000"
+                      type="number"
+                    ></ion-input>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="2" size="5">
+                  <ion-item lines="none">
+                    <ion-label position="floating">Sales Person</ion-label>
+                    <ion-input
+                      readonly="true"
+                      placeholder="David"
+                      type="string"
+                    ></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="5">
+                  <ion-item lines="none">
+                    <ion-label position="floating">Branch</ion-label>
+                    <ion-input
+                      readonly="true"
+                      placeholder="Saki Naka"
+                      type="string"
+                    ></ion-input>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="2" size="5">
+                  <ion-item lines="none">
+                    <ion-label position="floating">Warehouse</ion-label>
+                    <ion-input
+                      readonly="true"
+                      placeholder="Warehouse 1"
+                      type="string"
+                    ></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row class="align">
+                <ion-col size="5">
+                  <ion-item lines="none">
+                    <ion-label>Campaign Invoice</ion-label>
+                    <ion-checkbox slot="start"></ion-checkbox>
+                  </ion-item>
+                </ion-col>
+                <ion-col offset="2" size="5">
+                  <ion-item>
+                    <ion-label position="floating">Item Barcode</ion-label>
+                    <ion-input
+                      placeholder="Enter Barcode"
+                      type="string"
+                    ></ion-input>
                   </ion-item>
                 </ion-col>
               </ion-row>
@@ -107,11 +176,6 @@
                 <ion-col offset="2" size="5">
                   <ion-item lines="none">
                     <ion-label position="stacked">Contact Person</ion-label>
-                    <!-- <ion-input
-                      disabled
-                      type="text"
-                      [(ngModel)]="salesInvoice.customer.name"
-                    ></ion-input> -->
                     {{customer.name}}
                   </ion-item>
                 </ion-col>
