feat(rma-frontend): Added UI for listing warranty-claims
added table to list items for a selected warranty claim

added back button for warranty-claims

--- a/packages/rma-frontend/src/app/warranty-ui/warranty/warranty.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/warranty/warranty.page.html
@@ -20,7 +20,10 @@
                 {{ snakeToTitleCase(model) }}
               </ion-text>
               <ion-button style="padding-left:10%"(click)="changeRoute('bulk-serial')">
-                Bluk Serial
+                Serial Tab
+              </ion-button>
+              <ion-button style="padding-left:10%"(click)="changeRoute('warranty-claim')">
+                Claims Tab
               </ion-button>
             </ion-card-title>
           </ion-card-header>
