refactor(rma-frontend): refactor ionic deprecated code

--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -11,8 +11,8 @@
 
 <ion-content class="page-background">
   <ion-grid class="ion-no-padding">
-    <ion-row>
-      <ion-col>
+    <ion-row class="ion-no-padding">
+      <ion-col class="ion-no-padding">
         <ion-card>
           <ion-card-header>
             <ion-row class="align">
