--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -1,9 +1,6 @@
 <ion-app>
-  <ion-split-pane>
-    <ion-menu
-      type="overlay"
-      style="box-shadow: 1px 0 4px rgb(0, 0, 0,.24) !important ;z-index:100 ; border-right: 0"
-    >
+  <ion-split-pane contentId="main-content">
+    <ion-menu contentId="main-content" type="overlay">
       <ion-header>
         <ion-toolbar>
           <ion-title>Menu</ion-title>
@@ -13,7 +10,7 @@
         <ion-list>
           <ion-menu-toggle auto-hide="false">
             <ion-item
-              routerDirection="root"
+              routerDirection="'root'"
               *ngIf="!loggedIn"
               routerLink="/"
               (click)="login()"
@@ -33,7 +30,7 @@
               <ion-label>Home</ion-label>
             </ion-item>
             <ion-item
-              routerDirection="forward"
+              routerDirection="'root'"
               *ngIf="loggedIn"
               routerLink="/sales"
               lines="none"
@@ -51,7 +48,7 @@
               <ion-label>Warranty</ion-label>
             </ion-item>
             <ion-item
-              routerDirection="root"
+              routerDirection="'root'"
               routerLink="/"
               *ngIf="loggedIn"
               (click)="logout()"
@@ -65,6 +62,6 @@
         </ion-list>
       </ion-content>
     </ion-menu>
-    <ion-router-outlet main></ion-router-outlet>
+    <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
