--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/sales-return/sales-return.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/sales-return/sales-return.component.html
@@ -1,3 +1,57 @@
-<p>
-  sales-return works!
-</p>
+<ion-card>
+  <ion-card-content class="ion-no-padding">
+    <table
+      mat-table
+      class="full-width-table"
+      [dataSource]="dataSource"
+      style="width: 100%;"
+    >
+      <ng-container matColumnDef="voucherNo">
+        <th mat-header-cell *matHeaderCellDef>
+          Voucher No
+        </th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.voucherNo }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>
+          Date
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.date }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef>
+          Amount
+        </th>
+        <td mat-cell *matCellDef="let row">₹ {{ row.amount }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="remark">
+        <th mat-header-cell *matHeaderCellDef>
+          Remark
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.remark }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="createdBy">
+        <th mat-header-cell *matHeaderCellDef>
+          Created By
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.createdBy }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="submittedBy">
+        <th mat-header-cell *matHeaderCellDef>
+          Submitted By
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.submittedBy }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </ion-card-content>
+</ion-card>
