--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -85,51 +85,44 @@
       </ion-col>
     </ion-row>
   </ion-card-header>
-  <ion-card-content>
-    <ion-grid class="ion-no-padding">
-      <ion-row>
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef>Claim No.</th>
-            <td mat-cell *matCellDef="let element">
-              Claim-000{{ element.position }}
-            </td>
-          </ng-container>
+  <ion-card-content class="ion-no-padding">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef>Claim No.</th>
+        <td mat-cell *matCellDef="let element">
+          Claim-000{{ element.position }}
+        </td>
+      </ng-container>
 
-          <ng-container matColumnDef="serial">
-            <th mat-header-cell *matHeaderCellDef>Serial No</th>
-            <td mat-cell *matCellDef="let element">{{ element.serial }}</td>
-          </ng-container>
+      <ng-container matColumnDef="serial">
+        <th mat-header-cell *matHeaderCellDef>Serial No</th>
+        <td mat-cell *matCellDef="let element">{{ element.serial }}</td>
+      </ng-container>
 
-          <ng-container matColumnDef="item">
-            <th mat-header-cell *matHeaderCellDef>Item</th>
-            <td mat-cell *matCellDef="let element">{{ element.item }}</td>
-          </ng-container>
+      <ng-container matColumnDef="item">
+        <th mat-header-cell *matHeaderCellDef>Item</th>
+        <td mat-cell *matCellDef="let element">{{ element.item }}</td>
+      </ng-container>
 
-          <ng-container matColumnDef="company">
-            <th mat-header-cell *matHeaderCellDef>Company</th>
-            <td mat-cell *matCellDef="let element">{{ element.company }}</td>
-          </ng-container>
+      <ng-container matColumnDef="company">
+        <th mat-header-cell *matHeaderCellDef>Company</th>
+        <td mat-cell *matCellDef="let element">{{ element.company }}</td>
+      </ng-container>
 
-          <ng-container matColumnDef="supplier">
-            <th mat-header-cell *matHeaderCellDef>Supplier</th>
-            <td mat-cell *matCellDef="let element">{{ element.supplier }}</td>
-          </ng-container>
+      <ng-container matColumnDef="supplier">
+        <th mat-header-cell *matHeaderCellDef>Supplier</th>
+        <td mat-cell *matCellDef="let element">{{ element.supplier }}</td>
+      </ng-container>
 
-          <ng-container matColumnDef="claimsReceivedDate">
-            <th mat-header-cell *matHeaderCellDef>Claim Received Date</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.claimsReceivedDate }}
-            </td>
-          </ng-container>
+      <ng-container matColumnDef="claimsReceivedDate">
+        <th mat-header-cell *matHeaderCellDef>Claim Received Date</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.claimsReceivedDate }}
+        </td>
+      </ng-container>
 
-          <tr
-            mat-header-row
-            *matHeaderRowDef="displayedColumns; sticky: true"
-          ></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-      </ion-row>
-    </ion-grid>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
   </ion-card-content>
 </ion-card>
