--- a/packages/rma-frontend/src/app/warranty-ui/bulk-serial/bulk-serial.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/bulk-serial/bulk-serial.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>bulk-serial</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="navigateBack()">
+        <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Bulk Serial</ion-title>
   </ion-toolbar>
 </ion-header>
 
